# int-conv

./: LICENSE  generate.hs  int-conv.cabal
.github/workflows/: haskell-ci.yml
src/Data/Int/: Conv.hs
tests/: properties.hs
